--- a/src/beer-beer-card-mini.html
+++ b/src/beer-beer-card-mini.html
@@ -76,7 +76,7 @@
      
             <div>
                 <div class="name">[[beer.name]]</div>
-                <div class="style">[[beer.style.name]]</div>             
+                <div class="style">[[beer.styleName]]</div>             
                 <div class="abv" hidden="[[!beer.abv]]">ABV: [[beer.abv]]</div>
                 
             </div>
