--- a/src/beer-tv-card.html
+++ b/src/beer-tv-card.html
@@ -145,7 +145,7 @@
              </div>
                 <div class="title">
                   <div class="location">
-                    <div>[[beer.breweryCity]], [[beer.breweryState]]</div>
+                    <div>[[beer.city]], [[beer.state]]</div>
                     
                   </div>
                   <div class="abv" hidden="[[!beer.abv]]">ABV: [[beer.abv]]</div>
