--- a/src/beer-tap.html
+++ b/src/beer-tap.html
@@ -1,7 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-document.html">
 <link rel="import" href="../bower_components/iron-image/iron-image.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 <link rel="import" href="../bower_components/neon-animation/animations/slide-from-right-animation.html">
 <link rel="import" href="../bower_components/neon-animation/animations/slide-right-animation.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -12,6 +13,7 @@
 <link rel="import" href="../bower_components/paper-input/paper-textarea.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
 <link rel="import" href="beer-beer-card.html">
+<link rel="import" href="beer-icons.html">
 
 <link rel="import" href="../my_components/data/upload-image.html">
 <link rel="import" href="beer-fab.html">
@@ -24,7 +26,17 @@
 
     <style>
 
+    a{
+        text-decoration: none;
+        font-size: 1em;
+        font-weight: 300;
+        color: var(--app-primary-color); 
+      }
 
+    .card{
+        margin: 10px;
+        padding: 20px;
+      }
 
       .motto {
         font-size: 2.0em;
@@ -62,6 +74,17 @@
     </div>
    </template>
 
+   <iron-media-query query="max-width: 767px" query-matches="{{smallScreen}}"></iron-media-query>
+   <div hidden="[[smallScreen]]">
+   <paper-material class="card" elevation="1">
+    <a aria-label$="Cast to Television" href$="/[[nameUrl]]/tv?orgid=[[orgId]]" target="_blank">
+     <iron-icon icon="beer-icons:cast"></iron-icon>
+     Cast to Television
+    </a>
+   </paper-material>
+   </div>
+   
+
     <template is="dom-repeat" items="[[_getArray(organization.onTap)]]" sort="_sortCategoryOrder">
      <div hidden="[[!_showTapped(item.tapped)]]">
       <!--<template is="dom-if" if="_showTapped(item.tapped)">-->
@@ -69,7 +92,8 @@
           org-id="[[orgId]]" 
           beer-id="[[item.$key]]"
           organization="[[organization]]"
-          owner="[[owner]]">
+          owner="[[owner]]"
+          edit=true>
       </beer-beer-card>
      </div>
       <!--</template>-->
@@ -111,6 +135,12 @@
           computed: '_computePhotoUrl(category, place)'
         }
       },
+
+      canEdit:{
+        type: Boolean,
+        value: false
+      },
+
 
      _edit: function(){
         'use strict';
@@ -154,30 +184,34 @@
       _sortCategoryOrder: function(a,b){
       
         'use strict';
-        if (a.categoryOrder < b.categoryOrder)
+        if (a.order < b.order)
           return -1;
-        if (a.categoryOrder > b.categoryOrder)
+        if (a.order > b.order)
           return 1;
         return 0;
       },
 
       _computePhotoUrl: function (category, place) {
-        if(category.image){
-          if(category.image.banner){
-            if(category.image.banner.url){
-              return category.image.banner.url;
+        try{
+          if(category.image){
+            if(category.image.banner){
+              if(category.image.banner.url){
+                return category.image.banner.url;
+              }
             }
           }
-        }
-        var photoMeta = {};
-        var photos = place.photos
-        var categoryIndex = 1
-        if(photos.length < categoryIndex){
-          categoryIndex = photos.length
-        }
-        photoMeta.maxWidth = place.photos[categoryIndex].width;
-        photoMeta.maxHeight = place.photos[categoryIndex].height;
-        return place.photos[categoryIndex].getUrl(photoMeta);
+          var photoMeta = {};
+          var photos = place.photos
+          var categoryIndex = 1
+          if(photos.length < categoryIndex){
+            categoryIndex = photos.length
+          }
+          photoMeta.maxWidth = place.photos[categoryIndex].width;
+          photoMeta.maxHeight = place.photos[categoryIndex].height;
+          return place.photos[categoryIndex].getUrl(photoMeta);
+        }catch (error){
+
+       }
       },
 
       _test: function (obj) {
