--- a/src/beer-fab.html
+++ b/src/beer-fab.html
@@ -12,11 +12,11 @@
       .fab{
         position: fixed;
         top: 80vh;
-        left: 10%;
+        right: 10%;
         z-index: 100;
         visibility: visible;
         -webkit-transform: translateZ(0);
-        background-color: green;
+        background-color: var(--app-accent-color);
       }
 
       
