--- a/src/beer-tv-card.html
+++ b/src/beer-tv-card.html
@@ -140,7 +140,7 @@
           <div class="title">
        
              <div class="title">
-                <div class="style">[[beer.style.name]] from [[beer.breweryName]]</div>
+                <div class="style">[[beer.styleName]] from [[beer.breweryName]]</div>
                 
              </div>
                 <div class="title">
