--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <title>My Beer</title>
+  <title>Beer-Fly</title>
 
   <link rel="shortcut icon" sizes="32x32" href="/images/shop-icon-32.png">
 
