--- a/src/beer-contact.html
+++ b/src/beer-contact.html
@@ -69,7 +69,6 @@
 
     <!--THIS [[_test(place)]]-->
     
-    <beer-fab-search></beer-fab-search>
     <beer-fab owner="[[owner]]" on-tap="_edit"></beer-fab>
 
     <div class="motto">
@@ -85,7 +84,7 @@
       <div class="item">
 
        <beer-contact-card 
-                organization="[[place]]">
+           place="[[place]]">
        </beer-contact-card>
       </div>
     </div>
