--- a/src/beer-tv.html
+++ b/src/beer-tv.html
@@ -297,7 +297,7 @@
               fullArray.push(obj[key[i]])
             }
           }
-           fullArray = fullArray.sort(this._sortCategoryOrder);
+           fullArray = fullArray.sort(this._sortOrder);
 
            var returnArray = [];
            var blockArray = [];
@@ -324,12 +324,12 @@
       },
 
     
-      _sortCategoryOrder: function(a,b){
+      _sortOrder: function(a,b){
       
         'use strict';
-        if (a.categoryOrder < b.categoryOrder)
+        if (a.order < b.order)
           return -1;
-        if (a.categoryOrder > b.categoryOrder)
+        if (a.order > b.order)
           return 1;
         return 0;
       },
