--- a/src/beer-beer.html
+++ b/src/beer-beer.html
@@ -193,13 +193,25 @@
        dialogOpen:{
           type:Boolean
        },
+       nameUrl:{
+         type: String
+       },
+       owner:{
+         type: Boolean
+       },
+       crowdSource:{
+         type: Boolean
+       },
+   
+       beer:{
+         type: Object
+       },
 
        login: {
          type: Boolean,
          notify: true
        },
 
-       
         owner:{
           type: Boolean,
           value: false
