--- a/src/beer-hours-card.html
+++ b/src/beer-hours-card.html
@@ -48,6 +48,11 @@
 
       is: 'beer-hours-card',
 
+      properties: {
+        organization:{
+          type: Object
+        }
+      },
     
        _toArray: function (obj) {
         var returnArray = [];
