--- a/src/beer-login.html
+++ b/src/beer-login.html
@@ -106,9 +106,10 @@
       is: 'beer-login',
 
       properties: {
-
+        user:{
+            type: Object
+        },
        
-
       },
 
     _getMiniClass: function(){
