--- a/src/beer-menu-edit-item.html
+++ b/src/beer-menu-edit-item.html
@@ -183,6 +183,12 @@
        properties: {
         category: {
           type: Object
+        },
+        menuItems:{
+          type: Object
+        },
+        toggle:{
+          type: Boolean
         }
        },
 
