--- a/src/beer-menu-edit.html
+++ b/src/beer-menu-edit.html
@@ -162,9 +162,15 @@
         toggle: {
           type: Boolean
         },
+        menu:{
+          type: Object
+        },
         menuCategory: {
           type: Object,
           // computed: 'computeMenuCategory()
+        },
+        toggleDeleteCategory:{
+          type: Boolean
         },
         category:{
           type: Object
