--- a/src/beer-pub-favorite.html
+++ b/src/beer-pub-favorite.html
@@ -71,6 +71,12 @@
         favorite:{
           type:Boolean,
           value: false
+        },
+        statusKnown:{
+          type: Boolean
+        },
+        orgId:{
+          type: String
         }
 
        },
