--- a/src/beer-404-warning.html
+++ b/src/beer-404-warning.html
@@ -41,7 +41,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <h1>Sorry, we couldn't find that page</h1>
     </div>
     <beer-button>
-      <a href="/">Go to the home page</a>
+      <a href="/home">Go to the home page</a>
     </beer-button>
 
   </template>
