--- a/src/beer-fab.html
+++ b/src/beer-fab.html
@@ -31,6 +31,11 @@
     Polymer({
 
       is: 'beer-fab',
+      properties:{
+        owner: {
+          type: Boolean
+        }
+      }
 
     });
 
