--- a/src/beer-pub.html
+++ b/src/beer-pub.html
@@ -368,6 +368,15 @@
          type: Boolean,
          notify: true
        },
+       nameUrl:{
+        type: String
+       },
+       online:{
+         type: Boolean
+       },
+       orgId:{
+         type: String
+       },
 
         // visible: {
         //   type: Boolean,
