delete unnessary files

--- a/src/beer-contact-card.html
+++ b/src/beer-contact-card.html
@@ -92,8 +92,9 @@
     <div class="contact">
       <div>[[place.name]]</div>
       <div>
-        <a href="[[place.url]]"</a>
-        [[place.formatted_address]]
+        <a href="[[place.url]]">
+            [[place.formatted_address]]
+        </a>
         </div>
       <div>
           <a href="tel:[[place.formatted_phone_number]]">
