--- a/src/beer-tap-edit.html
+++ b/src/beer-tap-edit.html
@@ -3,7 +3,7 @@
 <link rel="import" href="../bower_components/iron-label/iron-label.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../bower_components/paper-card/paper-card.html">
-<link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">
+<!--<link rel="import" href="../bower_components/paper-checkbox/paper-checkbox.html">-->
 <link rel="import" href="../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../bower_components/paper-input/paper-textarea.html">
 <link rel="import" href="../bower_components/paper-item/paper-item.html">
@@ -86,7 +86,7 @@
 
       <template is="dom-repeat" items="[[beers]]" as="beer">
         
-        <paper-checkbox beer="[[beer]]"  on-tap="_addToTapList">Add to tap list</paper-checkbox>
+        <!--<paper-checkbox beer="[[beer]]"  on-tap="_addToTapList">Add to tap list</paper-checkbox>-->
         
           <beer-beer-card-mini 
             org-id="[[orgId]]" 
