--- a/src/beer-app.html
+++ b/src/beer-app.html
@@ -1,6 +1,6 @@
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
-<!--<link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
+<link rel="import" href="../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
 <link rel="import" href="../bower_components/app-layout/app-toolbar/app-toolbar.html">
 <link rel="import" href="../bower_components/app-layout/app-drawer/app-drawer.html">
@@ -32,15 +32,15 @@
 <link rel="import" href="../bower_components/polymerfire/polymerfire.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-app.html">
 <link rel="import" href="../bower_components/polymerfire/firebase-query.html">
-<link rel="import" href="../bower_components/polymerfire/firebase-auth.html">-->
+<link rel="import" href="../bower_components/polymerfire/firebase-auth.html">
 
 
-<!--<link rel="import" href="beer-home.html">
+<link rel="import" href="beer-home.html">
 <link rel="import" href="beer-icons.html">
 <link rel="import" href="beer-login.html">
 <link rel="import" href="beer-place-data.html">
 <link rel="import" href="beer-tabs.html">
-<link rel="import" href="beer-tab.html">-->
+<link rel="import" href="beer-tab.html">
 
 <dom-module id="beer-app">
 
@@ -281,7 +281,7 @@
 
 <!--<beer-analytics key="UA-39334307-16"></beer-analytics>-->
 
-<!--<iron-location path="{{path}}" query="{{query}}"></iron-location>
+<iron-location path="{{path}}" query="{{query}}"></iron-location>
 <iron-query-params params-string="{{query}}" params-object="{{queryParams}}">
 </iron-query-params>
 <app-route-converter path="{{path}}" query-params="{{queryParams}}" route="{{route}}">
@@ -490,7 +490,7 @@
       <div class= "footer-item">
        <iron-image src="/images/powered_by_google_on_non_white.png"></iron-image>
       </div>
-    </footer>-->
+    </footer>
 
 </template>
 
