--- a/src/beer-category-checkbox.html
+++ b/src/beer-category-checkbox.html
@@ -31,7 +31,7 @@
         data="{{categoryData}}">
     </firebase-query>
 
-     <!--<paper-checkbox checked="{{categoryData.display}}">[[categoryData.title]]</paper-checkbox>&nbsp-->
+     <paper-checkbox checked="{{categoryData.display}}">[[categoryData.title]]</paper-checkbox>&nbsp
 
   </template>
 
