--- a/src/beer-menu-edit.html
+++ b/src/beer-menu-edit.html
@@ -118,7 +118,7 @@
                   org-id="[[orgId]]">
                 </beer-menu-edit-category>
               
-                <paper-textarea 
+                <!--<paper-textarea 
                     class="text-input" 
                     label="Category Description" 
                     value="{{categoryItem.description}}"
@@ -129,7 +129,7 @@
                     org-id="[[orgId]]"
                    
                     menu-key="[[categoryItem.$key]]">
-                </beer-menu-edit-item>
+                </beer-menu-edit-item>-->
 
               </div>
           </div>
